--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-dom": "^16.3.2",
     "sass-loader": "^7.1.0"
   },
-  "homepage": "appannie/react-infinite-calendar",
+  "repository": "appannie/react-infinite-calendar",
   "license": "MIT",
   "keywords": [
     "react",
