--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,23 @@
 {
-  "extends": "react-app",
+  "extends": ["react-app", "prettier"],
+  "plugins": ["prettier"],
   "rules": {
     "comma-dangle": ["error", "always-multiline"],
-    "indent": ["error", 2, {"SwitchCase": 1}],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "semi": ["error", "always"],
-    "sort-keys": ["warn", "asc", {"caseSensitive": false, "natural": true}],
+    "sort-keys": ["warn", "asc", { "caseSensitive": false, "natural": true }],
     "no-mixed-operators": [
       "warn",
       {
         "groups": [
-          ['&', '|', '^', '~', '<<', '>>', '>>>'],
-          ['==', '!=', '===', '!==', '>', '>=', '<', '<='],
-          ['in', 'instanceof']
+          ["&", "|", "^", "~", "<<", ">>", ">>>"],
+          ["==", "!=", "===", "!==", ">", ">=", "<", "<="],
+          ["in", "instanceof"]
         ],
         "allowSamePrecedence": true
       }
-    ]
+    ],
+    "prettier/prettier": "error",
+    "jsx-a11y/href-no-hash": "off"
   }
 }
