--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server",
-    "lint": "eslint --fix src/**/*.js"
+    "lint": "esw --ext src/**/*.js --color",
+    "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -45,14 +46,16 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-css-modules-transform": "^1.2.1",
     "css-loader": "^1.0.1",
-    "eslint": "^5.2.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.21.0",
-    "eslint-plugin-import": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react-app": "^5.2.0",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-watch": "^6.0.1",
     "node-sass": "^4.13.0",
     "nwb": "^0.21.5",
     "nwb-sass": "^0.8.4",
