Update eslint deps and config

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.2.5",
     "date-fns": "^1.27.2",
     "dom-helpers": "^3.2.1",
+    "eslint-config-react-app": "^5.2.0",
     "prop-types": "^15.5.7",
     "react-tiny-virtual-list": "^2.0.0",
     "react-transition-group": "^1.1.30",
@@ -42,19 +43,19 @@
     "@storybook/cli": "^5.3.13",
     "@storybook/react": "^5.3.13",
     "@storybook/storybook-deployer": "^2.8.1",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-css-modules-transform": "^1.2.1",
+    "babel-preset-react-app": "^9.1.1",
     "css-loader": "^1.0.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-flowtype": "^3.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-watch": "^6.0.1",
     "node-sass": "^4.13.0",
     "nwb": "^0.21.5",
