--- a/package.json
+++ b/package.json
@@ -2,25 +2,19 @@
   "name": "@appannie/react-infinite-calendar",
   "version": "3.3.1",
   "description": "Infinite scrolling date-picker built with React, with localization, themes, keyboard support, and more.",
-  "main": "lib/index.js",
-  "module": "es/index.js",
+  "main": "lib",
+  "module": "es",
+  "umd:main": "umd",
   "files": [
-    "css",
     "es",
     "lib",
     "umd",
     "styles.css"
   ],
   "scripts": {
-    "build": "npm run clean && nwb build-react-component --no-vendor",
-    "prepare": "npm run build",
-    "clean": "nwb clean-module && nwb clean-demo",
-    "start": "nwb serve-react-demo",
+    "build": "NODE_ENV=production BABEL_ENV=production rollup -c",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "deploy-storybook": "storybook-to-ghpages",
-    "test": "nwb test-react",
-    "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server",
     "lint": "esw --ext src/**/*.js --color",
     "lint:fix": "yarn lint --fix"
   },
@@ -35,10 +29,14 @@
     "recompose": "^0.28.0"
   },
   "peerDependencies": {
-    "react": "^15.3.0 || ^16.0.0"
+    "react": "^15.3.0 || ^16.0.0",
+    "react-dom": "^15.3.0 || ^16.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-url": "^4.0.2",
     "@storybook/addon-options": "^5.3.13",
     "@storybook/cli": "^5.3.13",
     "@storybook/react": "^5.3.13",
@@ -58,12 +56,18 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-watch": "^6.0.1",
     "node-sass": "^4.13.0",
-    "nwb": "^0.21.5",
-    "nwb-sass": "^0.8.4",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "sass-loader": "^7.3.1"
+    "rollup": "^1.31.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-delete": "^1.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-postcss": "^2.0.6",
+    "rollup-plugin-terser": "^5.2.0",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.41.6"
   },
   "repository": "appannie/react-infinite-calendar",
   "license": "MIT",
