Fix lint error, add pre-commit hook for eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
         "allowSamePrecedence": true
       }
     ],
+    "no-unused-vars": "error",
     "prettier/prettier": "error",
     "jsx-a11y/href-no-hash": "off"
   }
