--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "prepare": "yarn build",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "deploy-storybook": "storybook-to-ghpages",
-    "lint": "esw --ext src/**/*.js --color",
+    "lint": "esw --ext src/**/*.js src/index.js --color",
     "lint:fix": "yarn lint --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -49,14 +54,15 @@
     "css-loader": "^1.0.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^3.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-watch": "^6.0.1",
+    "husky": "^3.1.0",
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
