--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bneigher/react-infinite-calendar",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "Infinite scrolling date-picker built with React, with localization, themes, keyboard support, and more.",
   "main": "lib",
   "module": "es",
@@ -36,8 +36,8 @@
     "recompose": "^0.30.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^16.8.0 || ^17.0.2",
+    "react-dom": "^16.8.0 || ^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
