--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bneigher/react-infinite-calendar",
-  "version": "4.0.1",
+  "version": "4.0.2",
   "description": "Infinite scrolling date-picker built with React, with localization, themes, keyboard support, and more.",
   "main": "lib",
   "module": "es",
@@ -77,6 +77,7 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-terser": "^7.0.2",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
