--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@appannie/react-infinite-calendar",
   "version": "3.3.6",
   "description": "Infinite scrolling date-picker built with React, with localization, themes, keyboard support, and more.",
-  "main": "lib/src",
-  "module": "es/src",
+  "main": "lib",
+  "module": "es",
   "umd:main": "umd",
   "files": [
     "es",
@@ -79,7 +79,6 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-terser": "^7.0.2",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
