--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "react-dom": "^16.12.0",
     "rollup": "^2.45.2",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-cpy": "^2.0.1",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
