--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-watch": "^7.0.0",
     "husky": "^6.0.0",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.1",
     "postcss": "^8.2.12",
     "postcss-loader": "^5.2.0",
     "prettier": "^2.2.1",
@@ -106,6 +106,7 @@
     "flat"
   ],
   "volta": {
-    "node": "14.17.6"
+    "node": "14.17.6",
+    "yarn": "1.22.17"
   }
 }
